--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Text Remover - Upper Right Corner</title>
+    <title>Image Stripper</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="app">
       <header class="app__header">
-        <h1>Upper-Right Text Remover</h1>
+        <h1>Image Stripper</h1>
         <p>
           Upload a photo and automatically blend away the text that lives in the
           upper-right corner. Adjust the removal area if needed, then download
